# ChangeLog for app-admin/usermin
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/usermin/ChangeLog,v 1.95 2006/10/16 19:19:35 eradicator Exp $

  16 Oct 2006; Jeremy Huddleston <eradicator@gentoo.org> -files/usermin.pam,
  -usermin-1.180.ebuild, -usermin-1.200.ebuild, -usermin-1.210.ebuild:
  Removing old versions.

*usermin-1.230 (16 Oct 2006)

  16 Oct 2006; Jeremy Huddleston <eradicator@gentoo.org>
  +usermin-1.230.ebuild:
  Version bump for security bug #145829.

  01 Aug 2006; Jose Luis Rivero <yoswink@gentoo.org> usermin-1.220.ebuild:
  Stable on alpha wrt security bug #138552.

  29 Jul 2006; Rene Nussbaumer <killerfox@gentoo.org> usermin-1.220.ebuild:
  Stable on hppa. See bug #138552.

  27 Jul 2006; Paul Varner <fuzzyray@gentoo.org> usermin-1.220.ebuild:
  Stable on x86 wrt Bug #138552

  27 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  usermin-1.220.ebuild:
  ppc stable, bug #138552

*usermin-1.220 (27 Jul 2006)

  27 Jul 2006; Stuart Herbert <stuart@gentoo.org> +usermin-1.220.ebuild:
  Version bump; fixes security bug #138552

*usermin-1.210 (23 Jun 2006)

  23 Jun 2006; Jeremy Huddleston <eradicator@gentoo.org>
  +usermin-1.210.ebuild:
  Version Bump.

  09 Jun 2006; Jeremy Huddleston <eradicator@gentoo.org>
  usermin-1.200.ebuild:
  Stable ppc64.

  05 Jun 2006; Jeremy Huddleston <eradicator@gentoo.org>
  -usermin-1.190.ebuild:
  Removing old version.

  05 Jun 2006; Jeremy Huddleston <eradicator@gentoo.org>
  usermin-1.200.ebuild:
  Stable amd64 and sparc.

*usermin-1.200 (12 Apr 2006)

  12 Apr 2006; Jeremy Huddleston <eradicator@gentoo.org>
  +usermin-1.200.ebuild:
  Version bump.

*usermin-1.190 (18 Mar 2006)

  18 Mar 2006; Jeremy Huddleston <eradicator@gentoo.org>
  +usermin-1.190.ebuild:
  Version bump.

  03 Jan 2006; Jeremy Huddleston <eradicator@gentoo.org>
  -usermin-1.160.ebuild:
  removing insecure version.
