@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/usermin/Attic/usermin-1.230.ebuild,v 1.1 2006/10/16 18:59:39 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/usermin/Attic/usermin-1.230.ebuild,v 1.2 2006/10/17 17:13:16 corsair Exp $
 
 IUSE="ssl"
 
@@ -12,7 +12,7 @@ SRC_URI="mirror://sourceforge/webadmin/${P}.tar.gz"
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="~alpha amd64 ~hppa ~ppc ~ppc64 ~sparc ~x86"
+KEYWORDS="~alpha amd64 ~hppa ~ppc ppc64 ~sparc ~x86"
 
 DEPEND="dev-lang/perl"
 
