@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/webmin
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/webmin/ChangeLog,v 1.128 2006/10/16 19:17:16 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/webmin/ChangeLog,v 1.129 2006/10/17 17:14:51 corsair Exp $
+
+  17 Oct 2006; Markus Rothe <corsair@gentoo.org> webmin-1.300.ebuild:
+  Stable on ppc64; bug #145829
 
   16 Oct 2006; Jeremy Huddleston <eradicator@gentoo.org>
   -files/virtual-server-2.31-checkip.patch,
