@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/usermin
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/usermin/ChangeLog,v 1.95 2006/10/16 19:19:35 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/usermin/ChangeLog,v 1.96 2006/10/17 17:13:16 corsair Exp $
+
+  17 Oct 2006; Markus Rothe <corsair@gentoo.org> usermin-1.230.ebuild:
+  Stable on ppc64; bug #145829
 
   16 Oct 2006; Jeremy Huddleston <eradicator@gentoo.org> -files/usermin.pam,
   -usermin-1.180.ebuild, -usermin-1.200.ebuild, -usermin-1.210.ebuild:
